[workspace]
resolver = "2"
members = [
    "nft",
    "security"
]

[workspace.package]
version = "2.2.0"
repository = "https://github.com/provenance-io/provwasm"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
### CosmWasm

cosmwasm-schema = { version = "1.5" }
cosmwasm-std = { version = "1.5", default-features = false, features = ["cosmwasm_1_1"] }
cw2 = "1.1.2"
cw-storage-plus = { version = "1.2.0" }

### ProvWasm
provwasm-mocks = { version = "2.2.0" }
provwasm-std = { version = "2.2.0" }

base64 = "0.22.0"
chrono = { version = "0.4.37", default-features = false }
schemars = "0.8.16"
semver = "1.0.22"
serde = { version = "1.0.197", default-features = false, features = [
    "derive",
] }
serde_json = { version = "1.0.115", features = ["std"] }
thiserror = { version = "1.0.58" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
