[package]
name = "nft"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]

exclude = [
    "nft.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[package.metadata.scripts]
optimize = """docker run --rm -v $(pwd)/../:/code:Z --workdir /code/nft \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""
optimize-arm = """docker run --rm -v $(pwd)/../:/code:Z --workdir /code/nft \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.16.0
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw-ownable = "2.1.0"
cw-storage-plus = { workspace = true }
cw-utils = "2.0.0"
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
sha2 = { version = "0.10.7", default-features = false }
thiserror = { workspace = true }
uuid = { version = "1.4.1", default-features = false }

[dev-dependencies]
provwasm-mocks = { workspace = true }