[package]
name = "security"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Matthew Witkowski <mwitkowski@provenance.io"]

exclude = ["security.wasm", "security-aarch64.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[package.metadata.scripts]
optimize = """docker run --rm -v $(pwd)/../:/code:Z --workdir /code/security \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""
optimize-arm = """docker run --rm -v $(pwd)/../:/code:Z --workdir /code/security \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.16.0
"""

[dependencies]
provwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
provwasm-mocks = { workspace = true }
